tests/paczka1/fuzzy1/17720015.err
Error in line 1: TWEjcL7 A758 73,9
Error in line 5: H6iQwccW A893 53,0
Error in line 2: 7HSDcQ S751 86,8
Error in line 12: 7HSDcQ A893 19,1
Error in line 13: 7HSDcQ A758 27,7
Error in line 18: qmAB7Aoe S751 88,7
Error in line 25: A893 S751 3,63
Error in line 20: 7HSDcQ S751 52,9
Error in line 24: A893 S751 2,3
Error in line 30: A893 A758 71,6
Error in line 29: 7HSDcQ S736 6,4
Error in line 35: TWEjcL7 A893 4,5
